--- a/imageproperties.ui
+++ b/imageproperties.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1031</width>
+    <width>1112</width>
     <height>401</height>
    </rect>
   </property>
@@ -18,7 +18,7 @@
     <rect>
      <x>9</x>
      <y>9</y>
-     <width>901</width>
+     <width>991</width>
      <height>381</height>
     </rect>
    </property>
@@ -258,7 +258,7 @@
       <rect>
        <x>70</x>
        <y>30</y>
-       <width>622</width>
+       <width>643</width>
        <height>161</height>
       </rect>
      </property>
@@ -381,7 +381,7 @@
       <rect>
        <x>0</x>
        <y>20</y>
-       <width>895</width>
+       <width>918</width>
        <height>200</height>
       </rect>
      </property>
@@ -637,7 +637,7 @@
     <attribute name="title">
      <string>油样检测分析信息</string>
     </attribute>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -1013,7 +1013,7 @@
       <rect>
        <x>40</x>
        <y>40</y>
-       <width>748</width>
+       <width>784</width>
        <height>62</height>
       </rect>
      </property>
@@ -1127,7 +1127,7 @@
       <rect>
        <x>30</x>
        <y>20</y>
-       <width>816</width>
+       <width>861</width>
        <height>128</height>
       </rect>
      </property>
@@ -1254,7 +1254,7 @@
       <item row="2" column="2">
        <widget class="QLabel" name="label_61">
         <property name="text">
-         <string>铁谱图片</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -1271,14 +1271,17 @@
       <item row="3" column="0">
        <widget class="QLabel" name="label_63">
         <property name="text">
-         <string>铁谱图片标识</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;铁谱图片标识&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
       <item row="3" column="1">
        <widget class="QComboBox" name="_comboBoxMentalSampleImageTag">
         <property name="editable">
-         <bool>true</bool>
+         <bool>false</bool>
+        </property>
+        <property name="currentIndex">
+         <number>-1</number>
         </property>
        </widget>
       </item>
@@ -1299,7 +1302,7 @@
     <attribute name="title">
      <string>磨粒标注信息</string>
     </attribute>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -1361,7 +1364,7 @@
       <item row="3" column="3">
        <widget class="QLabel" name="label_96">
         <property name="text">
-         <string>磨粒图片(路径)</string>
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;磨粒图片(路径)&lt;span style=&quot; color:#ff0000;&quot;&gt;*&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
@@ -1560,12 +1563,12 @@
     <attribute name="title">
      <string>采样点信息</string>
     </attribute>
-    <widget class="QWidget" name="">
+    <widget class="QWidget" name="layoutWidget">
      <property name="geometry">
       <rect>
        <x>60</x>
        <y>40</y>
-       <width>587</width>
+       <width>623</width>
        <height>62</height>
       </rect>
      </property>
@@ -1654,10 +1657,10 @@
     </widget>
    </widget>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
-     <x>920</x>
+     <x>1000</x>
      <y>20</y>
      <width>106</width>
      <height>68</height>
