recover all data,export searche result

--- a/advancesearchdlg.ui
+++ b/advancesearchdlg.ui
@@ -2507,16 +2507,16 @@
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_2">
+        <widget class="QPushButton" name="exportBtn">
          <property name="text">
-          <string>PushButton</string>
+          <string>导出查询</string>
          </property>
         </widget>
        </item>
        <item>
-        <widget class="QPushButton" name="pushButton_3">
+        <widget class="QPushButton" name="importBtn">
          <property name="text">
-          <string>PushButton</string>
+          <string>导入查询</string>
          </property>
         </widget>
        </item>
