--- a/imageproperties.ui
+++ b/imageproperties.ui
@@ -2,6 +2,9 @@
 <ui version="4.0">
  <class>ImageProperties</class>
  <widget class="QDialog" name="ImageProperties">
+  <property name="windowModality">
+   <enum>Qt::ApplicationModal</enum>
+  </property>
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -23,7 +26,7 @@
     </rect>
    </property>
    <property name="currentIndex">
-    <number>7</number>
+    <number>3</number>
    </property>
    <widget class="QWidget" name="tab">
     <attribute name="title">
@@ -381,11 +384,21 @@
       <rect>
        <x>0</x>
        <y>20</y>
-       <width>918</width>
+       <width>980</width>
        <height>200</height>
       </rect>
      </property>
      <layout class="QGridLayout" name="gridLayout_8">
+      <item row="5" column="9" colspan="3">
+       <widget class="QLineEdit" name="_editOilSampleInfo"/>
+      </item>
+      <item row="3" column="5">
+       <widget class="QLabel" name="label_34">
+        <property name="text">
+         <string>采样原因</string>
+        </property>
+       </widget>
+      </item>
       <item row="0" column="0">
        <widget class="QLabel" name="label_25">
         <property name="text">
@@ -435,6 +448,13 @@
         </property>
        </widget>
       </item>
+      <item row="4" column="0">
+       <widget class="QLabel" name="label_35">
+        <property name="text">
+         <string>采样单位</string>
+        </property>
+       </widget>
+      </item>
       <item row="2" column="5">
        <widget class="QComboBox" name="_comboBoxOilSampleMonitorPartID">
         <property name="editable">
@@ -461,20 +481,6 @@
       </item>
       <item row="3" column="2" colspan="2">
        <widget class="QLineEdit" name="_editOilSampleMount"/>
-      </item>
-      <item row="3" column="5">
-       <widget class="QLabel" name="label_34">
-        <property name="text">
-         <string>采样原因</string>
-        </property>
-       </widget>
-      </item>
-      <item row="4" column="0">
-       <widget class="QLabel" name="label_35">
-        <property name="text">
-         <string>采样单位</string>
-        </property>
-       </widget>
       </item>
       <item row="4" column="2">
        <widget class="QComboBox" name="_comboBoxOilSampleSampleUnit">
@@ -514,13 +520,6 @@
        <widget class="QLabel" name="label_40">
         <property name="text">
          <string>采样量(ml)</string>
-        </property>
-       </widget>
-      </item>
-      <item row="5" column="7" colspan="3">
-       <widget class="QLabel" name="label_41">
-        <property name="text">
-         <string>采样说明</string>
         </property>
        </widget>
       </item>
@@ -596,9 +595,6 @@
         </property>
        </widget>
       </item>
-      <item row="5" column="10" colspan="2">
-       <widget class="QLineEdit" name="_editOilSampleInfo"/>
-      </item>
       <item row="5" column="12" colspan="2">
        <widget class="QLabel" name="label_42">
         <property name="text">
@@ -629,6 +625,23 @@
          <bool>true</bool>
         </property>
        </widget>
+      </item>
+      <item row="5" column="7" colspan="2">
+       <widget class="QLabel" name="label_41">
+        <property name="text">
+         <string>采样说明</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="7" colspan="2">
+       <widget class="QLabel" name="label_116">
+        <property name="text">
+         <string>采样时机</string>
+        </property>
+       </widget>
+      </item>
+      <item row="6" column="9" colspan="3">
+       <widget class="QComboBox" name="_comboBoxOilSampleSituation"/>
       </item>
      </layout>
     </widget>
@@ -1553,6 +1566,54 @@
        <widget class="QComboBox" name="_comboBoxMoliTypical">
         <property name="editable">
          <bool>true</bool>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="2">
+       <widget class="QLabel" name="_labelOriginalImage">
+        <property name="sizePolicy">
+         <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
+          <horstretch>0</horstretch>
+          <verstretch>0</verstretch>
+         </sizepolicy>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="0" colspan="2">
+       <widget class="QLabel" name="label_115">
+        <property name="text">
+         <string>原始图像</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="3">
+       <widget class="QLabel" name="label_117">
+        <property name="text">
+         <string>标注结果</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="4">
+       <widget class="QLabel" name="_labelResultImage">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aa5500;&quot;&gt;未标注&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="5">
+       <widget class="QLabel" name="label_119">
+        <property name="text">
+         <string>掩码图像</string>
+        </property>
+       </widget>
+      </item>
+      <item row="7" column="6">
+       <widget class="QLabel" name="_labelMaskImage">
+        <property name="text">
+         <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; color:#aa5500;&quot;&gt;未标注&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
         </property>
        </widget>
       </item>
