--- a/login.ui
+++ b/login.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>391</width>
+    <height>270</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -27,35 +27,16 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>401</width>
-     <height>301</height>
+     <width>391</width>
+     <height>271</height>
     </rect>
    </property>
-   <widget class="QLabel" name="label">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>80</y>
-      <width>51</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="text">
-     <string>用户名</string>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="_editUsername">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>102</x>
       <y>80</y>
-      <width>113</width>
+      <width>181</width>
       <height>27</height>
      </rect>
     </property>
@@ -66,31 +47,12 @@
      </sizepolicy>
     </property>
    </widget>
-   <widget class="QLabel" name="label_2">
-    <property name="geometry">
-     <rect>
-      <x>80</x>
-      <y>130</y>
-      <width>41</width>
-      <height>17</height>
-     </rect>
-    </property>
-    <property name="sizePolicy">
-     <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-      <horstretch>0</horstretch>
-      <verstretch>0</verstretch>
-     </sizepolicy>
-    </property>
-    <property name="text">
-     <string>密码</string>
-    </property>
-   </widget>
    <widget class="QLineEdit" name="_editPasswd">
     <property name="geometry">
      <rect>
-      <x>190</x>
+      <x>102</x>
       <y>130</y>
-      <width>113</width>
+      <width>181</width>
       <height>27</height>
      </rect>
     </property>
@@ -107,7 +69,7 @@
    <widget class="QPushButton" name="_login">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>100</x>
       <y>200</y>
       <width>81</width>
       <height>27</height>
@@ -126,7 +88,7 @@
    <widget class="QPushButton" name="_cancel">
     <property name="geometry">
      <rect>
-      <x>220</x>
+      <x>200</x>
       <y>200</y>
       <width>81</width>
       <height>27</height>
@@ -142,9 +104,39 @@
      <string>取消</string>
     </property>
    </widget>
+   <widget class="QWidget" name="_icon" native="true">
+    <property name="geometry">
+     <rect>
+      <x>105</x>
+      <y>30</y>
+      <width>41</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="baseSize">
+     <size>
+      <width>30</width>
+      <height>30</height>
+     </size>
+    </property>
+    <property name="autoFillBackground">
+     <bool>false</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>160</x>
+      <y>39</y>
+      <width>66</width>
+      <height>17</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>登录界面</string>
+    </property>
+   </widget>
   </widget>
-  <zorder>centralWidget</zorder>
-  <zorder>_cancel</zorder>
  </widget>
  <resources/>
  <connections/>
