--- a/LeftWindow.ui
+++ b/LeftWindow.ui
@@ -20,13 +20,13 @@
    <string>Form</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="1" column="0">
+   <item row="0" column="0">
     <widget class="QTabWidget" name="tabWidgetLeftWindow">
      <property name="toolTip">
       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;查询&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="currentIndex">
-      <number>1</number>
+      <number>0</number>
      </property>
      <widget class="QWidget" name="tabImage">
       <property name="toolTip">
@@ -56,7 +56,7 @@
             <x>0</x>
             <y>0</y>
             <width>199</width>
-            <height>377</height>
+            <height>410</height>
            </rect>
           </property>
           <layout class="QGridLayout" name="gridLayout_2">
@@ -196,6 +196,16 @@
           <bool>true</bool>
          </property>
         </widget>
+        <widget class="QTreeView" name="treeView">
+         <property name="geometry">
+          <rect>
+           <x>120</x>
+           <y>280</y>
+           <width>256</width>
+           <height>192</height>
+          </rect>
+         </property>
+        </widget>
        </widget>
       </widget>
      </widget>
@@ -243,13 +253,6 @@
        </widget>
       </widget>
      </widget>
-    </widget>
-   </item>
-   <item row="0" column="0" alignment="Qt::AlignLeft">
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>简易查询</string>
-     </property>
     </widget>
    </item>
   </layout>
