--- a/ImageCompletion.qrc
+++ b/ImageCompletion.qrc
@@ -21,5 +21,7 @@
         <file>icons/go.png</file>
         <file>icons/add.png</file>
         <file>icons/login.png</file>
+        <file>icons/ruler.png</file>
+        <file>icons/scale.png</file>
     </qresource>
 </RCC>
